# arkoi_os

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  linker.ld  start.sh
.devcontainer/: Dockerfile  devcontainer.json
cmake/toolchains/: host.cmake  i686-elf.cmake
grub/: grub.cfg
include/arch/x86/: gdt.h  idt.h
include/arch/x86/boot/: multiboot2.h
include/arch/x86/gdt/: gdt.h
include/arch/x86/idt/: idt.h  pic.h
include/drivers/: keyboard.h  pit.h  serial.h  vga.h
include/gdt/: gdt.h
include/idt/: idt.h  pic.h
include/lib/: early_alloc.h  kassert.h  kbuffer.h  kio.h  kmalloc.h  kmemory.h  kpanic.h  kstdio.h  kstring.h  ksymbols.h  pmm.h  symbols.h
include/lib/memory/: emm.h  pmm.h  vmm.h
kernel/: CMakeLists.txt
kernel/include/arch/x86/boot/: multiboot2.h
kernel/include/arch/x86/idt/: pic.h
kernel/include/drivers/: keyboard.h  pit.h  serial.h  vga.h
kernel/include/lib/: kbuffer.h  kcursor.h  kio.h  kmemory.h  kpanic.h  kstdio.h  kstring.h  ksymbols.h
kernel/include/lib/memory/: emm.h  pmm.h  vmm.h
kernel/src/arch/x86/boot/: boot.s  crti.s  multiboot2.c
kernel/src/arch/x86/gdt/: gdt.c
kernel/src/arch/x86/idt/: idt.c
kernel/src/drivers/: keyboard.c  pit.c  serial.c  vga.c
kernel/src/kernel/: main.c
kernel/src/lib/: kbuffer.c  kcursor.c  kmemory.c  kpanic.c  kstdio.c
kernel/src/lib/memory/: emm.c  pmm.c  vmm.c
src/: boot.s  kernel.c  kpanic.c  kstdio.c  kstdio.h  kstring.c  kstring.h  vga.c  vga.h
src/arch/x86/boot/: boot.s  crtn.s  multiboot2.c
src/arch/x86/gdt/: gdt.c
src/arch/x86/idt/: idt.c  idt.s  pic.c
src/boot/: boot.s  crti.s  crtn.s
src/drivers/: keyboard.c  pit.c  serial.c  vga.c
src/gdt/: gdt.c  gdt.s
src/idt/: idt.c  idt.s  pic.c
src/kernel/: main.c
src/lib/: early_alloc.c  kbuffer.c  kio.c  kmalloc.c  kmemory.c  kpanic.c  kstdio.c  kstring.c  pmm.c
src/lib/memory/: emm.c  pmm.c  vmm.c
tests/: CMakeLists.txt  main.cpp
tests/src/: kbuffer_tests.cpp  kcursor_tests.cpp  kmemory_tests.cpp  kstdio_tests.cpp
